# chatGPTwebQQbot

./: .gitignore  Command Prompt.lnk  README.md  chatGPT.lnk  启动机器人.txt
chatGPTQQbot/: .env.dev  README.md  pyproject.toml
chatGPTQQbot/js/: GPTIO.py  detec_status.js  getReply.js  ghotmail_account.csv  qqgroup_userinfo.db  user_account.csv
chatGPTQQbot/src/plugins/gpttalk/: __init__.py
